markup bugfixes, which were found on iphone 4s

--- a/mobile/scss/general/general.scss
+++ b/mobile/scss/general/general.scss
@@ -18,7 +18,10 @@ body{
   font: 14px Helvetica Neue, Helvetica, Arial;
   color: $white;
   overflow: visible;
-  position: relative;
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
   z-index: 2;
 
   /** full size header and content pane **/
