--- a/mobile/scss/modules/signup.scss
+++ b/mobile/scss/modules/signup.scss
@@ -31,10 +31,11 @@ ion-content {
 
     input{
       height: 50px;
-      padding: 0 30px;
+      padding: 15px 30px;
       color: #fff;
       font-weight: bold;
       font-size: 14px;
+      line-height: 20px;
     }
   }
 
@@ -107,6 +108,7 @@ ion-content {
     max-width: 350px;
 
     .item{
+      vertical-align: top;
       border: 0;
       margin-top: 0;
       text-align:left;
@@ -117,7 +119,7 @@ ion-content {
 /*  license */
 .license {
   margin: auto;
-  width: 260px;
+  width: 275px;
 
   .item-radio{
     background-color:transparent;
@@ -167,7 +169,10 @@ ion-content {
     width: 118px;
     height: 118px;
     display: inline-block;
+    vertical-align: top;
     margin: 2px -17px;
+    font-size: 0;
+    line-height: 0;
     /*margin:2px -25px;*/
   }
 
@@ -207,6 +212,7 @@ ion-content {
 
   .checkbox{
     position: inherit;
+    vertical-align: top;
     left: 50%;
     margin: 0px -31px;
     padding: 0;
@@ -218,7 +224,6 @@ ion-content {
        pointer-events: none;
        -webkit-background-size: 2399px 2269px;
        background-size: 2399px 2269px;
-
        border-color: transparent;
        border:0;
     }
@@ -477,9 +482,10 @@ $but-height: 90px;
 
 
 .signup-section{
-  background: url("../img/welcomeBackground@2x.png") ;
-  -webkit-background-size: contain;
-  background-size: contain;
+  background: url("../img/welcomeBackground@2x.png") 0 0 no-repeat ;
+  -webkit-background-size: cover;
+  background-size: cover;
+
 
   .header,
   .bar,
